// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics Check metrics 1`] = `
graphql_resolver_duration_seconds_bucket{le="X",parentType: Query,fieldName: m_foo,status: success} Y
graphql_resolver_duration_seconds_sum{parentType: Query,fieldName: m_foo,status: success} Y
graphql_resolver_duration_seconds_count{parentType: Query,fieldName: m_foo,status: success} Y
graphql_resolver_duration_seconds_bucket{le="X",parentType: MetricsFoo,fieldName: baz,status: success} Y
graphql_resolver_duration_seconds_sum{parentType: MetricsFoo,fieldName: baz,status: success} Y
graphql_resolver_duration_seconds_count{parentType: MetricsFoo,fieldName: baz,status: success} Y
`;

exports[`Metrics Check request histogram metrics buckets 1`] = `
Array [
  "0.02",
  "0.1",
  "0.5",
  "2",
  "+Inf",
]
`;

exports[`Metrics Check resolver histogram metrics buckets 1`] = `
Array [
  "0.02",
  "0.1",
  "0.5",
  "+Inf",
]
`;

exports[`Metrics Parsing errors metric 1`] = `[Error: Syntax Error: Unexpected Name "wrong".: {"response":{"errors":[{"message":"Syntax Error: Unexpected Name \\"wrong\\".","extensions":{"code":"GRAPHQL_PARSE_FAILED"}}],"status":400},"request":{"query":"wrong query"}}]`;

exports[`Metrics Validation errors metric 1`] = `[Error: Cannot query field "wrong" on type "Query".: {"response":{"errors":[{"message":"Cannot query field \\"wrong\\" on type \\"Query\\".","extensions":{"code":"GRAPHQL_VALIDATION_FAILED"}}],"status":400},"request":{"query":"{\\n  wrong\\n}\\n"}}]`;
